--- a/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
@@ -1,10 +1,10 @@
 node {
-    def server = Artifactory.newServer url: SERVER_URL, credentialsId: CREDENTIALS
+    def server = Artifactory.newServer url:'http://ec2-18-214-36-186.compute-1.amazonaws.com:8084/artifactory' , credentialsId: admin
     def rtMaven = Artifactory.newMavenBuild()
     def buildInfo
 
     stage ('Clone') {
-        git url: 'https://github.com/JFrog/project-examples.git'
+        git url: 'https://github.com/nickgulrajani/project-examples.git'
     }
 
     stage ('Artifactory configuration') {
