--- a/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-    def server = Artifactory.newServer url:'http://ec2-18-214-36-186.compute-1.amazonaws.com:8084/artifactory' , credentialsId: admin
+    def server = Artifactory.newServer url:'http://ec2-18-214-36-186.compute-1.amazonaws.com:8084/artifactory' , credentialsId: Jfrog
     def rtMaven = Artifactory.newMavenBuild()
     def buildInfo
 
@@ -8,7 +8,7 @@ node {
     }
 
     stage ('Artifactory configuration') {
-        rtMaven.tool = MAVEN_TOOL // Tool name from Jenkins configuration
+        rtMaven.tool = Maven // Tool name from Jenkins configuration
         rtMaven.deployer releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local', server: server
         rtMaven.resolver releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot', server: server
         buildInfo = Artifactory.newBuildInfo()
