--- a/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-    def server = Artifactory.newServer url:'http://ec2-18-214-36-186.compute-1.amazonaws.com:8084/artifactory' , credentialsId:
+    def server = Artifactory.newServer url:'http://ec2-18-214-36-186.compute-1.amazonaws.com:8084/artifactory'
     def rtMaven = Artifactory.newMavenBuild()
     def buildInfo
 
