--- a/jenkins-examples/pipeline-examples/props-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/props-example/Jenkinsfile
@@ -2,7 +2,7 @@ node {
     git url: 'https://github.com/JFrog/project-examples.git'
 
     // Obtain an Artifactory server instance, defined in Jenkins --> Manage:
-    def server = Artifactory.server SERVER_ID
+    def server = Artifactory.server Jfrog
 
     // Read the upload spec which was downloaded from github.
     def uploadSpec = readFile 'jenkins-examples/pipeline-examples/resources/props-upload.json'
