--- a/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-example/Jenkinsfile
@@ -9,8 +9,8 @@ node {
 
     stage ('Artifactory configuration') {
         rtMaven.tool = 'Maven' // Tool name from Jenkins configuration
-        rtMaven.deployer releaseRepo: 'libs-release-local', snapshotRepo: 'libs-snapshot-local', server: server
-        rtMaven.resolver releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot', server: server
+        rtMaven.deployer releaseRepo: 'example-repo-local', snapshotRepo: 'example-snapshot-local', server: server
+        rtMaven.resolver releaseRepo: 'example-repo', snapshotRepo: 'example-snapshot', server: server
         buildInfo = Artifactory.newBuildInfo()
     }
 
