--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -10,15 +10,18 @@ node {
     stage ('Artifactory configuration') {
         
         script {
-        server = Artifactory.server 'Jfrog'
+            def server = Artifactory.server 'Jfrog'
 
-        rtMaven = Artifactory.newMavenBuild()
-        rtMaven.tool = 'Maven' // Tool name from Jenkins configuration
-        rtMaven.deployer releaseRepo: 'example-repo-local', snapshotRepo: 'example-repo-local', server
-        rtMaven.resolver releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot', server
-        rtMaven.deployer.deployArtifacts = false // Disable artifacts deployment during Maven run
+            def rtMaven = Artifactory.newMavenBuild()
+            
+            rtMaven.tool = 'Maven' // Tool name from Jenkins configuration
+            rtMaven.deployer releaseRepo: 'example-repo-local', snapshotRepo: 'example-repo-local', server
+            rtMaven.resolver releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot', server
+            
+            rtMaven.deployer.deployArtifacts = false // Disable artifacts deployment during Maven run
 
-        buildInfo = Artifactory.newBuildInfo()
+            def buildInfo = Artifactory.newBuildInfo()
+            
         
        
         }
