--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -1,5 +1,7 @@
 node {
-   
+    def server
+    def rtMaven
+    def buildInfo
     
     stage ('Clone') {
         git url: 'https://github.com/nickgulrajani/project-examples.git'
@@ -8,7 +10,7 @@ node {
     stage ('Artifactory configuration') {
         
         script {
-            def server = Artifactory.server 'Jfrog'
+            server = Artifactory.server 'Jfrog'
 
             def rtMaven = Artifactory.newMavenBuild()
             
@@ -18,7 +20,7 @@ node {
             
             rtMaven.deployer.deployArtifacts = false // Disable artifacts deployment during Maven run
 
-            def buildInfo = Artifactory.newBuildInfo()
+            buildInfo = Artifactory.newBuildInfo()
             
         
        
