--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -15,8 +15,10 @@ node {
             rtMaven = Artifactory.newMavenBuild()
             
             rtMaven.tool = 'Maven' // Tool name from Jenkins configuration
-            rtMaven.deployer releaseRepo: 'example-repo-local', snapshotRepo: 'example-repo-local', server
-            rtMaven.resolver releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot', server
+            rtMaven.deployer server: server, releaseRepo: 'example-repo-local', snapshotRepo: 'example-repo-local'
+            rtMaven.resolver server: server, releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot'
+            //rtMaven.deployer releaseRepo: 'example-repo-local', snapshotRepo: 'example-repo-local', server
+            //rtMaven.resolver releaseRepo: 'libs-release', snapshotRepo: 'libs-snapshot', server
             
             rtMaven.deployer.deployArtifacts = false // Disable artifacts deployment during Maven run
 
