--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -32,9 +32,8 @@ node {
     }
  
     stage ('Test') {
-       // rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean test'
+        rtMaven.run pom: 'maven-example/pom.xml', goals: 'clean test'
         
-        rtMaven.run pom: 'maven-example/pom.xml', goals: 'deploy'
     }
         
     stage ('Install') {
