--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -6,6 +6,17 @@ node {
     stage ('Clone') {
         git url: 'https://github.com/nickgulrajani/project-examples.git'
     }
+    
+    stage('SonarQube Code analysis') {
+            steps {
+              script {
+                    withSonarQubeEnv('Sonar 7') {
+						def sonarHome = tool 'Sonar'
+                        sh '${sonarHome}/bin/sonar-scanner -D sonar-project.properties'
+                    }
+              }
+            }
+    }
  
     stage ('Artifactory configuration') {
         
