--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -10,8 +10,9 @@ node {
     stage('SonarQube Code analysis') {
             
               script {
+		    def sonarHome = tool 'Sonar';
                     withSonarQubeEnv('Sonar7') {
-			def sonarHome = tool 'Sonar'
+			
                         sh '${sonarHome}/bin/sonar-scanner -D sonar-project.properties'
                     }
               }
