--- a/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/Jenkinsfile
@@ -10,10 +10,9 @@ node {
     stage('SonarQube Code analysis') {
             
               script {
-		    def sonarHome = tool 'Sonar';
+		    def scannerHome = tool 'Sonar';
                     withSonarQubeEnv('Sonar7') {
-			
-                        sh '${sonarHome}/bin/sonar-scanner -D sonar-project.properties'
+                        sh "${scannerHome}/bin/sonar-scanner"
                     }
               }
             
