--- a/jenkins-examples/pipeline-examples/maven-deploy-example/sonar-project.properties
+++ b/jenkins-examples/pipeline-examples/maven-deploy-example/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=pharma:sales
+sonar.projectKey=test:testformaven
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=PharmaItalySalesforceApp
+sonar.projectName=TestForMavenDeploy
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
