--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
 sonar.sources=./
+sonar.java.source=8
 #sonar.java.binaries=build/
 #sonar.login=d01cc6522c95865d1ff2c63d1ffe5a2fbbc3397b
 # Encoding of the source code. Default is default system encoding
