--- a/jenkins-examples/pipeline-examples/promotion-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/promotion-example/Jenkinsfile
@@ -3,7 +3,7 @@ node {
     git url: 'https://github.com/nickgulrajani/project-examples.git'
 
     // Obtain an Artifactory server instance, defined in Jenkins --> Manage:
-    def server = Artifactory.server SERVER_ID
+    def server = Artifactory.server jfrog 
 
     // Create the upload spec.
     def uploadSpec = readFile 'jenkins-examples/pipeline-examples/resources/props-upload.json'
