--- a/jenkins-examples/pipeline-examples/promotion-example/Jenkinsfile
+++ b/jenkins-examples/pipeline-examples/promotion-example/Jenkinsfile
@@ -1,48 +1,39 @@
-node {
-    stage 'Build'
-    git url: 'https://github.com/nickgulrajani/project-examples.git'
+pipeline {
+    agent any
+    env {
 
-    // Obtain an Artifactory server instance, defined in Jenkins --> Manage:
+    SERVER_ID = 'jfrog'
+}
+    stages {
+        stage('Clone'){
+            steps {
+                git url: 'https://github.com/nickgulrajani/project-examples.git'
+            }
+        }
 
-    rtServer (
-    id: 'jfrog',
-    url: 'http://ec2-54-188-187-183.us-west-2.compute.amazonaws.com:8082/artifactory ',
-    // If you're using username and password:
-    username: 'admin',
-    password: 'changeme'
-)
 
-    // Create the upload spec.
-    def uploadSpec = readFile 'jenkins-examples/pipeline-examples/resources/props-upload.json'
+        stage('Artifactory download and upload'){
+            steps {
+                script{
+                    // Obtain an Artifactory server instance, defined in Jenkins --> Manage:
+                    def server = Artifactory.server SERVER_ID 
 
-    // Upload to Artifactory.
-    def buildInfo = server.upload spec: uploadSpec
+                    // Read the download and upload specs:
+                    def downloadSpec = readFile 'jenkins-examples/pipeline-examples/resources/props-download.json'
+                    def uploadSpec = readFile 'jenkins-examples/pipeline-examples/resources/props-upload.json'
 
-    // Create the download spec.
-    def downloadSpec = readFile 'jenkins-examples/pipeline-examples/resources/props-download.json'
+                    // Download files from Artifactory:
+                    def buildInfo1 = server.download spec: downloadSpec
+                    // Upload files to Artifactory:
+                    def buildInfo2 = server.upload spec: uploadSpec
 
-    // Download from Artifactory.
-    server.download spec: downloadSpec, buildInfo: buildInfo
+                    // Merge the local download and upload build-info instances:
+                    buildInfo1.append buildInfo2
 
-    // Publish the build to Artifactory
-    server.publishBuildInfo buildInfo
-
-    stage 'Promotion'
-    def promotionConfig = [
-        //Mandatory parameters
-        'buildName'          : buildInfo.name,
-        'buildNumber'        : buildInfo.number,
-        'targetRepo'         : 'libs-release-local',
-
-        //Optional parameters
-        'comment'            : 'this is the promotion comment',
-        'sourceRepo'         : 'libs-snapshot-local',
-        'status'             : 'Released',
-        'includeDependencies': true,
-        'failFast'           : true,
-        'copy'               : true
-    ]
-
-    // Promote build
-    server.promote promotionConfig
+                    // Publish the merged build-info to Artifactory
+                    server.publishBuildInfo buildInfo1
+                }
+            }
+        }
+    }
 }
